# airwave

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  config.toml  docker-compose.yaml  platform.yml  secret-paths.yml
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/fdroid/metadata/: io.ahara.airwave.yml
api/: Dockerfile
backend/: ARCHITECTURE.md  Cargo.toml  Dockerfile  clippy.toml  config.toml
backend/docs/: WIIM-PROTOCOL.md
backend/src/: config.rs  main.rs
backend/src/control/: device_config.rs  devices.rs  eq.rs  groups.rs  models.rs  playback.rs  presets.rs  queue.rs  session.rs
backend/src/media/: tag_writer.rs
backend/src/upnp/: xml.rs
backend/src/wiim/: discovery.rs  mod.rs  probe.rs  schema.rs  scpd.rs  soap_client.rs
backend/tests/: xml_spec.rs
control/backend/: Dockerfile  pyproject.toml
control/backend/tests/: test_health.py  test_queue.py
control/backend/wiim_control/: config.py  events.py  main.py
control/backend/wiim_control/devices/: manager.py  models.py  router.py
control/backend/wiim_control/discovery/: scanner.py
control/backend/wiim_control/eq/: router.py
control/backend/wiim_control/groups/: router.py
control/backend/wiim_control/playback/: models.py  queue.py  router.py
control/backend/wiim_control/playlists/: models.py  router.py  store.py
control/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
control/frontend/public/: manifest.json
control/frontend/src/: App.test.tsx  App.tsx  index.css  test-utils.tsx
dlna-server/: Cargo.toml  Dockerfile  config.toml
dlna-server/src/: config.rs  lib.rs
dlna-server/src/upnp/: soap.rs
dlna-server/tests/: xml_spec.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: config.js  sw.js
frontend/src/: App.test.tsx  App.tsx  auth.ts  config.test.ts  config.ts  index.css  main.tsx  test-utils.tsx
frontend/src/api/: client.ts
frontend/src/components/: Login.tsx
infrastructure/terraform/: api.tf  cognito.tf  frontend.tf  locals.tf  main.tf  outputs.tf
src/: config.rs  main.rs
src/media/: library.rs  metadata.rs  mod.rs
src/services/: connection_manager.rs  content_directory.rs
src/ssdp/: mod.rs
src/upnp/: didl.rs  xml.rs
tests/: xml_spec.rs
web/: Dockerfile
wiim-server/: ARCHITECTURE.md  Cargo.toml  Dockerfile
wiim-server/docs/: WIIM-PROTOCOL.md
wiim-server/src/: api.rs  lib.rs  main.rs  streaming.rs
wiim-server/src/control/: art.rs  device_config.rs  devices.rs  eq.rs  events.rs  groups.rs  library.rs  metadata.rs  mod.rs  models.rs  playback.rs  playback_monitor.rs  playlists.rs  presets.rs  queue.rs  session.rs  state.rs  timer.rs
wiim-server/src/media/: art.rs  library.rs  mod.rs
wiim-server/src/ssdp/: messages.rs
wiim-server/src/upnp/: didl.rs  mod.rs
wiim-server/src/wiim/: device.rs  discovery.rs  https_api.rs  mod.rs  soap_client.rs
wiim-server/src/wiim/services/: av_transport.rs  mod.rs  play_queue.rs  rendering_control.rs
wiim-server/tests/: xml_spec.rs
(+85 files in other folders)
