[package]
name = "wiim-dlna"
version = "0.1.0"
edition = "2021"
description = "Minimal DLNA/UPnP media server for WiiM devices"
license = "MIT"
repository = "https://github.com/wiim-dlna/wiim-dlna"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
lofty = "0.22"
uuid = { version = "1", features = ["v4", "v5"] }
socket2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2"
parking_lot = "0.12"
httpdate = "1"
local-ip-address = "0.6"

[dev-dependencies]
pretty_assertions = "1"
roxmltree = "0.20"
tempfile = "3"
